crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_bind__dynamic_class.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<div :class=\"cls\"></div>\"#)"
---
const { normalizeClass: _normalizeClass, openBlock: _openBlock, createElementBlock: _createElementBlock } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", {
    class: _normalizeClass(cls)
  }, null, 2 /* CLASS */))
}
