crates/vize_atelier_dom/tests/snapshots/dom_snapshot__v_bind__merge_static_and_dynamic_style_with_vbind_object.snap
---
source: crates/vize_atelier_dom/tests/dom_snapshot.rs
expression: "get_compiled(r#\"<input v-bind=\"attrs\" style=\"color: red\" :style=\"dynamicStyle\" />\"#)"
---
const { openBlock: _openBlock, createElementBlock: _createElementBlock, mergeProps: _mergeProps } = Vue

function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("input", _mergeProps(attrs, {
    style: [{"color":"red"}, dynamicStyle]
  }), null, 16 /* FULL_PROPS */))
}
